test-cases/negative/test_063_break_outside_loop.lay
# negative test: break statement outside loop
# expected: parser should reject this

break


